rabbitmq+springboot整合发送消息,交换机和队列的绑定

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: userservice
   cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8080
     nacos:
       server-addr: localhost:8848
       discovery:
