--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -25,6 +25,10 @@
         <artifactId>ojdbc8</artifactId>
         <version>19.7.0.0</version>
     </dependency>
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+    </dependency>
 </dependencies>
 
 </project>
