--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -16,5 +16,7 @@ spring:
           uri: lb://orderservice
           predicates:
             - Path=/menu/**
+      default-filters:
+        - AddRequestHeader=origin,gateway
 
 
